[gd_scene load_steps=4 format=2]

[ext_resource path="res://Minigames/Fishing Game/Fishes/Fish6.gd" type="Script" id=1]
[ext_resource path="res://Assets/Portraits/cleric.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.56522, 8.00292 )

[node name="Fish6" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Moviment_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Death_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Fish6_area_entered"]
[connection signal="timeout" from="Moviment_Timer" to="." method="_on_Moviment_Timer_timeout"]
[connection signal="timeout" from="Death_Timer" to="." method="_on_Death_Timer_timeout"]
